# ExamMachine2QTI

./: .gitignore  Makefile  README.md  pyproject.toml
exammachine2qti/: main.py
exammachine2qti/qti_convert/: __init__.py  main.py  requirements.txt
exammachine2qti/qti_convert/config/: __init__.py
exammachine2qti/qti_convert/formats/: __init__.py  docx.py
exammachine2qti/qti_convert/qti_parser/: __init__.py
exammachine2qti/qti_convert/qti_parser/assessment_meta/: __init__.py
exammachine2qti/qti_convert/qti_parser/item/: __init__.py
exammachine2qti/qti_convert/qti_parser/question_type/: __init__.py  calculated.py  fill_in_multiple_blanks.py  matching.py  multiple_answers.py  multiple_choice.py  multiple_dropdowns.py  numerical.py  short_answer.py  true_false.py
