[project]
name = "ExamMachine2QTI"
version = "0.1.3"
description = "Convert ExamMachine-style text exams into QTI packages"
requires-python = ">=3.11"
dependencies = [
    "logzero>=1.7,<2",
    "lxml>=4.9,<6",
    "python-docx>=1.1,<2",
    "htmldocx>=0.0.6,<1",
    "text2qti>=0.7,<1",
]

[project.scripts]
exammachine2qti = "exammachine2qti.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
]
